--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -80,7 +80,8 @@ Body:
         <p>A API retornará respostas em formato JSON, incluindo mensagens de sucesso ou detalhes de erro conforme apropriado.</p>
 
         <footer class="mt-5">
-            <p>Higor Zandaide - © 2024 API Documentation</p>
+            <p>Higor Zenaide - © 2024 API Documentation</p>
+            <p>Gabriela Sanguini - Te amo meu amor</p>
         </footer>
     </div>
 </body>
